# simple-fuzzer

./: Cargo.toml
contract/: contract.sol
src/: evm.rs  fuzzer.rs  main.rs
