[package]
name = "simple_fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hex = "0.4.3"
revm = { version = "3.3.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-keccak = "2.0.2"
itertools = "0.11.0"
